tests/ui/associated-types/associated-types-overridden-binding.stderr
error[E0284]: type annotations needed: cannot satisfy `<Self as Iterator>::Item == i32`
  --> $DIR/associated-types-overridden-binding.rs:4:12
   |
LL | trait Bar: Foo<Item = u32> {}
   |            ^^^^^^^^^^^^^^^ cannot satisfy `<Self as Iterator>::Item == i32`
   |
note: required by a bound in `Foo`
  --> $DIR/associated-types-overridden-binding.rs:3:21
   |
LL | trait Foo: Iterator<Item = i32> {}
   |                     ^^^^^^^^^^ required by this bound in `Foo`

error[E0284]: type annotations needed: cannot satisfy `<Self as Iterator>::Item == i32`
  --> $DIR/associated-types-overridden-binding.rs:7:21
   |
LL | trait U32Iterator = I32Iterator<Item = u32>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^ cannot satisfy `<Self as Iterator>::Item == i32`
   |
note: required by a bound in `I32Iterator`
  --> $DIR/associated-types-overridden-binding.rs:6:30
   |
LL | trait I32Iterator = Iterator<Item = i32>;
   |                              ^^^^^^^^^^ required by this bound in `I32Iterator`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0284`.
